# src/routes/index.ts
@@ -6,7 +6,7 @@ import sessionRoutes from './session';
 const router = Router();
 
 router.use('/api/v1/auth', authRoutes);
-router.use('/api/v1/auth', profileRoutes);
+router.use('/api/v1/profile', profileRoutes);
 router.use('/api/v1/session', sessionRoutes);
 
 export default router;
